--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,6 +2,7 @@ services:
   awsflask: 
     container_name: awsflask
     build: . 
+    restart: always
     ports: 
       - 8000:8000 
     depends_on:
