--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,8 +3,9 @@ services:
     container_name: awsflask
     build: . 
     restart: always
-    ports: 
-      - 8000:8000 
+    expose: 8000
+    # ports: 
+    #   - 8000:8000 
     depends_on:
       mysql:
         condition: service_healthy
@@ -20,8 +21,8 @@ services:
     restart: always 
     env_file:
       - .env
-    ports: 
-      - 3306:3306
+    # ports: 
+    #   - 3306:3306
     healthcheck:
       test: ["CMD", "mysqladmin", "ping", "-h", "127.0.0.1", "--silent"]
       interval: 5s
